--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "fix:prettier": "prettier -w ."
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.9",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.2",
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
+    "@clerk/astro": "^2.13.4",
     "@fontsource-variable/inter": "^5.2.6",
     "astro": "^5.12.9",
     "astro-embed": "^0.9.0",
