--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/cloudflare": "^12.6.9",
     "@astrojs/node": "^9.4.3",
     "@clerk/astro": "^2.12.0",
+    "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.13.7",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
