--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
+    "@clerk/astro": "^2.13.6",
     "@fontsource-variable/inter": "^5.2.6",
     "astro": "^5.14.3",
     "astro-embed": "^0.9.0",
